# aggora-coin

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml
crates/aggora-cli/: Cargo.toml
crates/aggora-cli/src/: main.rs
crates/aggora-crypto/: Cargo.toml
crates/aggora-crypto/src/: lib.rs
crates/aggora-economy/: Cargo.toml
crates/aggora-economy/src/: lib.rs  simulator.rs
crates/aggora-poh/: Cargo.toml
crates/aggora-poh/src/: lib.rs
crates/aggora-rest/: Cargo.toml
crates/aggora-rest/src/: lib.rs
crates/aggora-state/: Cargo.toml
crates/aggora-state/src/: lib.rs
crates/aggora-state/tests/: end_to_end.rs
crates/aggora-storage/: Cargo.toml
crates/aggora-storage/src/: lib.rs
crates/aggora-types/: Cargo.toml
crates/aggora-types/src/: lib.rs
docs/: architecture.md  concept.md  features.md  implementation-status.md  parameter-tuning.md  runbook.md  spec.md
scripts/: gen-keys.sh  run-sim.sh  smoke-test.sh
seeds/: default_100_nodes.json  high_inflation.json
