[workspace]
resolver = "2"
members = [
  "crates/aggora-types",
  "crates/aggora-crypto",
  "crates/aggora-storage",
  "crates/aggora-poh",
  "crates/aggora-economy",
  "crates/aggora-state",
  "crates/aggora-rest",
  "crates/aggora-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/lucmuss/aggora-coin"
rust-version = "1.80"

[workspace.dependencies]
aggora-types = { path = "crates/aggora-types" }
aggora-crypto = { path = "crates/aggora-crypto" }
aggora-storage = { path = "crates/aggora-storage" }
aggora-poh = { path = "crates/aggora-poh" }
aggora-economy = { path = "crates/aggora-economy" }
aggora-state = { path = "crates/aggora-state" }
aggora-rest = { path = "crates/aggora-rest" }
anyhow = "1"
axum = { version = "0.7", features = ["ws", "macros"] }
base64 = "0.22"
blake3 = "1.5"
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
