[package]
name = "aggora-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "aggora-node"
path = "src/main.rs"

[dependencies]
aggora-crypto.workspace = true
aggora-economy.workspace = true
aggora-rest.workspace = true
aggora-state.workspace = true
aggora-types.workspace = true
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
rand_core.workspace = true
ed25519-dalek.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
