[package]
name = "aggora-rest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aggora-crypto.workspace = true
aggora-state.workspace = true
aggora-types.workspace = true
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
