[package]
name = "aggora-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aggora-crypto.workspace = true
aggora-economy.workspace = true
aggora-poh.workspace = true
aggora-storage.workspace = true
aggora-types.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
