[package]
name = "aggora-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aggora-types.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
tracing.workspace = true
